--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             document.querySelector('.ask').style.color = '#0059ff';
             document.querySelector('.heart').style.display = 'none';
             document.querySelector('.hidden').style.display = 'block';
-            document.getElementById('dammit').play() = 'dammit.mp3';
+            document.getElementById('dammit').play();
         }
     </script>
 
